--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-tilt": "^0.1.4",
-    "tachyons": "^4.12.0"
+    "tachyons": "^4.12.0",
+    "tsparticles": "^1.30.4"
   },
   "devDependencies": {
     "eslint": "7.30.0",
